--- a/.github/workflows/pages-build-deployment.yml
+++ b/.github/workflows/pages-build-deployment.yml
@@ -16,3 +16,6 @@ jobs:
         run: echo "Building and deploying..."
         env:
           GITHUB_TOKEN: ${{ secrets.NOVAKEY2 }}
+              - name: Notify on failure
+      if: failure()
+      run: echo "Deployment failed!"
