--- a/.github/workflows/pages-build-deployment.yml
+++ b/.github/workflows/pages-build-deployment.yml
@@ -28,9 +28,15 @@ jobs:
         with:
           path: ./public
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
+  
+      
+
+deploy:
+    ne eds: build
+                    - name: Setup GitHub Pages
+            uses: actions/configure-pages@v3
+
+ runs-on: ubuntu-latest
     permissions:
       pages: write
       id-token: write
