--- a/.github/workflows/pages-build-deployment.yml
+++ b/.github/workflows/pages-build-deployment.yml
@@ -1,4 +1,4 @@
- name: Pages Build and Deployment
+name: Pages Build and Deployment
 
 on:
   push:
@@ -28,23 +28,20 @@ jobs:
         with:
           path: ./public
 
-  
-      
-
-deploy:
-    ne eds: build
-                    - name: Setup GitHub Pages
-            uses: actions/configure-pages@v3
-
- runs-on: ubuntu-latest
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
     permissions:
       pages: write
       id-token: write
     steps:
+      - name: Setup GitHub Pages
+        uses: actions/configure-pages@v3
+      
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v1
         env:
-          GITHUB_TOKEN: ${{ secretsNOVAKEY3
+          GITHUB_TOKEN: ${{ secrets.NOVAKEY3 }}
 
       - name: Notify on failure
         if: failure()
