--- a/.github/workflows/pages-build-deployment.yml
+++ b/.github/workflows/pages-build-deployment.yml
@@ -23,10 +23,11 @@ jobs:
       - name: Build Site
         run: npm run build
 
-      - name: Upload Pages Artifact
-        uses: actions/upload-pages-artifact@v1
-        with:
-          path: ./public
+- name: Upload Pages Artifact
+  uses: actions/upload-artifact@v4
+  with:
+    name: github-pages
+    path: ./public
 
   deploy:
     needs: build
