--- a/.github/workflows/pages-build-deployment.yml
+++ b/.github/workflows/pages-build-deployment.yml
@@ -1,3 +1,11 @@
+name: Pages Build and Deployment
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
   build:
     runs-on: ubuntu-latest
     steps:
