--- a/.github/workflows/pages-build-deployment.yml
+++ b/.github/workflows/pages-build-deployment.yml
@@ -1,6 +1,3 @@
-name: Pages Build and Deployment
-
-on:
   push:
     branches:
       - main
@@ -19,7 +16,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: github-pages
-          path: pages-build-deployment.yml
+          path: .  # Ensures the entire site is uploaded
 
   deploy:
     needs: build
@@ -32,9 +29,10 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: github-pages
-          path: pages-build-deployment.yml
+          path: .  # Ensures the correct files are deployed
 
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v1
         env:
           GITHUB_TOKEN: ${{ secrets.NOVAKEY3 }}
+
