--- a/.github/workflows/pages-build-deployment.yml
+++ b/.github/workflows/pages-build-deployment.yml
@@ -1,3 +1,6 @@
+name: Pages Build and Deployment
+
+on:
   push:
     branches:
       - main
@@ -35,4 +38,3 @@ jobs:
         uses: actions/deploy-pages@v1
         env:
           GITHUB_TOKEN: ${{ secrets.NOVAKEY3 }}
-
