--- a/.github/workflows/pages-build-deployment.yml
+++ b/.github/workflows/pages-build-deployment.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: github-pages
-          path: .  # Ensures the correct files are deployed
+          path: ./public
 
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v1
