--- a/.github/workflows/pages-build-deployment.yml
+++ b/.github/workflows/pages-build-deployment.yml
@@ -37,4 +37,4 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.NOVAKEY3 }}
+          GITHUB_TOKEN: ${{ secrets.NOVAKEY }}
