--- a/package.json
+++ b/package.json
@@ -1,17 +1,27 @@
 {
   "name": "voxlibrorum",
   "version": "1.0.0",
-  "description": "",
+  "description": "A secure digital archive for anomalous texts and artifacts.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "archive",
+    "mystery",
+    "vox"
+  ],
+  "author": "Archivist Nova",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "express": "^5.1.0",
-    "helmet": "^8.1.0"
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.2",
+    "helmet": "^4.6.0",
+    "jsonwebtoken": "^9.0.0",
+    "sequelize": "^6.32.1",
+    "sqlite3": "^5.1.6"
   }
 }
